Fix header z-index on product page

--- a/assets/overrides.css
+++ b/assets/overrides.css
@@ -630,3 +630,11 @@ details[open] > .size-chart-modal {
     padding: 0 6rem;
   }
 }
+
+.section-header.shopify-section-group-header-group {
+  z-index: 1;
+}
+
+.section-header.shopify-section-group-header-group.scrolled-past-header {
+  z-index: 3;
+}
